--- a/Gila Bola (E-Commerce)/contact.html
+++ b/Gila Bola (E-Commerce)/contact.html
@@ -10,7 +10,7 @@
                 <table width="100%" height="100px">
                     <tr bgcolor="#000080">
                 <th>
-                    <a href="toko bola.html" ><img src="img/HOME.png" width="10%" height="100px"size="5" style="margin-right: 100%;"></a></align></th>
+                    <a href="index.html" ><img src="img/HOME.png" width="10%" height="100px"size="5" style="margin-right: 100%;"></a></align></th>
                <th>
                    <center><font face="elephant" size="100" color="yellow" >CONTACT US</font></center></th>
             </tr>
