--- a/Gila Bola (E-Commerce)/buy.html
+++ b/Gila Bola (E-Commerce)/buy.html
@@ -5,7 +5,7 @@
         <table>
             <thead><tr>
                 <th>
-                    <a href="toko bola.html" ><img src="img/HOME.png" width="10%" height="100px"size="5" style="margin-right: 100%;"></a></align></th>
+                    <a href="index.html" ><img src="img/HOME.png" width="10%" height="100px"size="5" style="margin-right: 100%;"></a></align></th>
                <th>
                    <font face="elephant" size="100" color="yellow" style="margin-left: -50%;">HAPPY SHOPPING</font></th>
             </tr>
